# hook

./: .gitmodules  README.md  settings.gradle.kts
.github/workflows/: build.yml  publish.yml
core/: build.gradle.kts
core/src/androidTest/java/com/aliucord/hook/: Dummy.java  UnitTest.java
core/src/main/: AndroidManifest.xml
core/src/main/cpp/: CMakeLists.txt  aliuhook.cpp  aliuhook.h  disable_profile_saver.cpp  disable_profile_saver.h  elf_img.cpp  elf_img.h  hidden_api.cpp  hidden_api.h  invoke_constructor.cpp  invoke_constructor.h  log.h  profile_saver.cpp  profile_saver.h
core/src/main/java/com/aliucord/hook/: AliuHook.java
core/src/main/java/de/robv/android/xposed/: XC_MethodHook.java  XC_MethodReplacement.java  XposedBridge.java
core/src/main/java/de/robv/android/xposed/callbacks/: IXUnhook.java  XCallback.java
example/: build.gradle  build.gradle.kts
example/src/main/: AndroidManifest.xml
example/src/main/java/com/aliucord/hook/example/: MainActivity.java
example/src/main/res/layout/: activity_main.xml
example/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
